# minilibx-linux

./: CMakeLists.txt  MiniLibXConfig.cmake.in  mlx.pc.in
test/: CMakeLists.txt
